// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Box checkGrammar=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box checkGrammar=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box checkHighlight=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box checkHighlight=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box checkSpaces=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box checkSpaces=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box className="my-classname" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text my-classname uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="brown" 1`] = `
<Fragment>
  <div
    className="color-schema-brown uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="brown-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-brown-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="cyan" 1`] = `
<Fragment>
  <div
    className="color-schema-cyan uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="cyan-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-cyan-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="default" 1`] = `
<Fragment>
  <div
    className="color-schema-default uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="green" 1`] = `
<Fragment>
  <div
    className="color-schema-green uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="green-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-green-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="grey" 1`] = `
<Fragment>
  <div
    className="color-schema-grey uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="grey-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-grey-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="orange" 1`] = `
<Fragment>
  <div
    className="color-schema-orange uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="orange-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-orange-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="pink" 1`] = `
<Fragment>
  <div
    className="color-schema-pink uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="pink-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-pink-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="purple" 1`] = `
<Fragment>
  <div
    className="color-schema-purple uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="purple-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-purple-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="red" 1`] = `
<Fragment>
  <div
    className="color-schema-red uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="red-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-red-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="yellow" 1`] = `
<Fragment>
  <div
    className="color-schema-yellow uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box colorSchema="yellow-rich" 1`] = `
<Fragment>
  <div
    className="color-schema-yellow-rich uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box content="This is Content from ContentMixin" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Box content=12345 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  >
    12345
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Box controlled=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box controlled=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box default props 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box disableClick=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box disableClick=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box disabled=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box disabled=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-disabled uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  >
    <span
      className="uu5-common-disabled-cover"
      key="disabledCover"
    />
  </div>
</Fragment>
`;

exports[`UU5.Bricks.Box dynamic=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box dynamic=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box example from docKit UU5.Bricks.Box in The box are Icon and Span 1`] = `
<Fragment>
  <div
    className="color-schema-blue-rich color-schema-primary uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-click uu5-common-hover uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    onClick={[Function]}
    style={Object {}}
    title={null}
  >
    <Icon
      id="uuID2"
      key="uuID2"
    />
    <Span
      content=" CLICK ME! Box with infoHeader/infoContent "
      id="uuID3"
      key="uuID3"
    />
  </div>
  <ForwardRef
    className="uu5-bricks-box-modal"
    content="This is infoContent from the box"
    header="This is infoHeader from the Box"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box hidden=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box hidden=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-hidden uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box id="myId" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="myId"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box ignoreHTML=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box ignoreHTML=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box infoContent="Text in opened modal window" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-click uu5-common-hover uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    onClick={[Function]}
    style={Object {}}
    title={null}
  />
  <ForwardRef
    className="uu5-bricks-box-modal"
    content="Text in opened modal window"
    header="Info"
    ref_={[Function]}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box infoHeader="Text in header in Box" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box mainAttrs=undefined 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box name="myName" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    name="myName"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box nestingLevel="bigBox" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box nestingLevel="bigBoxCollection" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box nestingLevel="box" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box nestingLevel="boxCollection" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box nestingLevel="container" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box nestingLevel="inline" 1`] = `
<Text
  className="uu5-bricks-box uu5-bricks-text"
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="inline"
/>
`;

exports[`UU5.Bricks.Box nestingLevel="page" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box nestingLevel="smallBox" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box nestingLevel="smallBoxCollection" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box nestingLevel="spa" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box noIndex=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box noIndex=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-noindex uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box pureRender=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box pureRender=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box selected=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box selected=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-selected uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box style="padding:8px; borderRadius: 2px" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={
      Object {
        "borderRadius": "2px",
        "padding": "8px",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box style={"backgroundColor":"red","color":"blue"} 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={
      Object {
        "backgroundColor": "red",
        "color": "blue",
      }
    }
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box textCorrector=false 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box textCorrector=true 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title={null}
  />
</Fragment>
`;

exports[`UU5.Bricks.Box tooltip="My Tooltip" 1`] = `
<Fragment>
  <div
    className="uu5-bricks-box uu5-bricks-text uu5-common-bg-style-filled uu5-bricks-box-nesting-level-small-box uu5-common-padding-s"
    id="uuID"
    style={Object {}}
    title="My Tooltip"
  />
</Fragment>
`;
